# mimxrt1052-ci-cd

./: .gitignore  CMakeLists.txt  armgcc.cmake  config.h.in  deploy.cmake  modules_config.cmake  settings.cmake  template_project.mex
board/: clock_config.c  clock_config.h  dcd.c  dcd.h  pin_mux.c  pin_mux.h
components/generic_list/: generic_list.cmake
components/hal_gpio/: hal_gpio.cmake
components/hal_gpio_driver/: hal_gpio_driver.cmake
components/hal_tim/: hal_tim.cmake
components/hal_tim_driver/: hal_tim_driver.cmake
components/hal_uart/: hal_uart.cmake
components/hal_uart_driver/: hal_uart_driver.cmake
components/heartbeat/: heartbeat.c  heartbeat.cmake  heartbeat.h  heartbeat_config.h  heartbeat_config.h.in  watchdog.c  watchdog.h
components/rtc/: rtc.c  rtc.cmake  rtc.h
components/serial_manager/: fsl_component_serial_manager.h  serial_manager.cmake
components/tim_manager/: tim_manager.cmake
device/: template_project_debug.ld  template_project_lib.ld  template_project_mem.ld
doc/: readme.md
drivers/: driver_clock.cmake  driver_common.cmake  driver_gpt.cmake  driver_igpio.cmake  driver_iomuxc.cmake  driver_lpuart.cmake  driver_ocotp.cmake  driver_pit.cmake  driver_snvs_hp.cmake  driver_wdog.cmake
middleware/easylogger/: easylogger.cmake
middleware/easylogger/inc/: elog.h  elog_cfg.h
middleware/easylogger/port/: elog_port.c
middleware/easylogger/src/: elog.c
source/: config.h  gpio_led_output.c  main.c  manufacturing_info.c  manufacturing_info.h
tools/: dcd.cfg  tft_flexspi.bd  tft_sdram.bd
utilities/: fsl_debug_console_conf.h
